# Mimic

./: .gitignore  README.md  UPDATING.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
scripts/: make-latest-json.ps1
src/: api.ts  icons.ts  main.ts  store.ts  styles.css  titlebar.ts  types.ts  ui.ts  updater.ts
src-tauri/: Cargo.toml  mimic_updater.key.pub  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  controller.rs  gamepad.rs  hotkeys.rs  lib.rs  main.rs  mapping.rs  model.rs  playback.rs  simulate.rs  state.rs  storage.rs
src/views/: library.ts  playback.ts  recorder.ts  settings.ts
