[package]
name = "mimic"
version = "1.0.0"
description = "Mimic — keyboard & mouse macro recorder/player"
authors = ["Mimic"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "mimic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["tray-icon"] }
tauri-plugin-dialog = "2.7"
tauri-plugin-global-shortcut = "2.3"
tauri-plugin-updater = "2.10"
tauri-plugin-process = "2.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

rdev = { version = "0.5.3", features = ["serialize"] }
spin_sleep = "1.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
